--- a/src/task/task.html
+++ b/src/task/task.html
@@ -14,7 +14,7 @@
       <a class="active">Dashboard</a>
     </nav>
         <nav>
-      <a href="src/habit/habit.html">Habit Tracker</a>
+    <a href="../habit/habit.html">Habit</a>    
     </nav>
   </aside>
 
