log project statrated

--- a/src/task/task.html
+++ b/src/task/task.html
@@ -41,9 +41,9 @@
 
     <section class="tasks" id="tasks">
       <div class="task">
-        <input type="checkbox" />
+        <input type="checkbox"/>
         <span id="output"></span>
-        <span class="tag">General</span>
+        <span class="tag"></span>
       </div>
     </section>
   </main>
